# fluffy-invention

./: :w  pyproject.toml  schema.yml
accounts/: admin.py  forms.py  models.py
accounts/migrations/: 0001_initial.py
django_project/: settings.py  urls.py
posts/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py
