[tool.poetry]
name = "blog-api-da4"
version = "0.1.0"
description = ""
authors = ["ax"]
readme = "README.md"
packages = [{include = "blog_api_da4"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"
dj-rest-auth = "^2.2.5"
django-allauth = "^0.51.0"
drf-spectacular = "^0.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
